# nldate

./: main.py  pyproject.toml
nldate/: __init__.py  parse.py
src/nldate/: __init__.py  parse.py
src/nldate.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_parse.py
